--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
-    "cypress": "^13.17.0"
+    "@cypress/webpack-preprocessor": "^6.0.2",
+    "@types/cypress": "^0.1.6",
+    "@types/node": "^22.10.5",
+    "cypress": "^13.17.0",
+    "typescript": "^5.7.3"
   }
 }
