--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.2",
+    "@faker-js/faker": "^9.3.0",
     "@types/cypress": "^0.1.6",
     "@types/node": "^22.10.5",
     "cypress": "^13.17.0",
