feat: Configuration de fakir.ts pour générer des données mockées pour les tests d'API

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
-      "types": ["cypress"]
+      "types": ["cypress", "@faker-js/faker"]
     },
     "include": [
         "**/*.ts", 
