--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@faker-js/faker": "^9.3.0",
     "@types/cypress": "^0.1.6",
     "@types/node": "^22.10.5",
+    "@types/uuid": "^10.0.0",
     "cypress": "^13.17.0",
     "typescript": "^5.7.3"
   }
