--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.2",
+    "@eslint/js": "^9.19.0",
     "@faker-js/faker": "^9.3.0",
     "@types/cypress": "^0.1.6",
     "@types/node": "^22.10.5",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "cypress": "^13.17.0",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "lint-staged": "^15.4.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "ts-loader": "^9.5.2",
     "typescript": "^5.7.3"
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   }
 }
