--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "cypress": "^14.0.1",
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
     "lint-staged": "^15.4.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "prettier": "^3.4.2",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0"
