Ajout du README, installation de Mochawesome et suppression des fichiers de test Cypress obsolètes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
     "lint-staged": "^15.4.3",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.4.1",
+    "mochawesome-report-generator": "^6.2.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "prettier": "^3.4.2",
